--- a/src/sass/components/_posts.scss
+++ b/src/sass/components/_posts.scss
@@ -2,8 +2,8 @@
 // Posts
 //
 
-$post-spacing: em(25px);
-$post-small-spacing: em(15px);
+$post-spacing: 25px;
+$post-small-spacing: 15px;
 
 .post {
   background-color: #fff;
